@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-04-15T16:27:43Z",
+  "timestamp" : "2022-04-16T16:20:15Z",
   "count_outdated" : 158,
   "uniques_outdated" : 102,
-  "count" : 193,
+  "count" : 191,
   "uniques" : 124,
   "clones" : [
     {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 15,
+      "count": 9,
       "count_minmax": [ 6, 15 ],
-      "uniques": 9,
+      "uniques": 6,
       "uniques_minmax": [ 4, 9 ]
     },
     {
@@ -53,6 +53,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-04-16T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
