@@ -1,11 +1,11 @@
 {
-  "count": 35,
+  "count": 33,
   "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 15,
-      "uniques": 9
+      "count": 9,
+      "uniques": 6
     },
     {
       "timestamp": "2022-04-03T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2022-04-15T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-16T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
