@@ -1,3 +1,9 @@
+2022-04-16T16:20:15Z:
+* notice: last 14d: all unq: 33 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 158 102 / 193 124
+* notice: next accum: outdated-all outdated-unq / all unq: 158 102 / 191 124
+* notice: prev json diff // prev day diff: unq all: +3 +4 / -3 -6 // +3 +4 / -3 -6
+
 2022-04-15T16:27:43Z:
 * notice: last 14d: all unq: 35 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 158 102 / 190 122
